optimize naive approach. Add switching on algorithm. Add tests.